Kyles-Website/src/components/contact/Contact.module.css
.contactplaceholder{
    width: 100%;
    height: 500px;
    background-color: aqua;
}

.herotitle{
    font-family: 'Calistoga', serif;
    font-size: 48px;
}

.herosubtitle{
    font-family: 'Calistoga', serif;
    margin-bottom: 2%;
}
.herotext{
    font-family: "Inter", sans-serif;
    font-size: 16px;
    font-weight: 400;
    color: rgba(16, 16, 16, 0.6);
}

.gradientheading {
    font-size: 22px;
    font-family: "Montserrat", sans-serif;
    font-style: normal;
    background: linear-gradient(90deg,  #010a2e 0%,  #a5e0f8 65% ,#77f7e8 100%);
    background-clip: text;
    -webkit-background-clip: text;
    color: transparent;
    -webkit-text-fill-color: transparent;
  }

  .cardgradientheadingleft {
    font-size: 22px;
    font-family: "Montserrat", sans-serif;
    font-style: normal;
    background: linear-gradient(90deg,   #b1c3ff 0%,  #a5e0f8 45% ,#010a2e 100%);
    background-clip: text;
    -webkit-background-clip: text;
    color: transparent;
    -webkit-text-fill-color: transparent;
  }


  .githubbutton {
    display: inline-flex;
    align-items: center;
    justify-content: space-evenly;
    background: #000;
    color: #fff;
    font-family: 'Inter', sans-serif;
    font-weight: 600;
    padding: 12px;
    border-radius: 14px;
    font-size: 22px;
    text-decoration: none;
    letter-spacing: 0.02em;
    border: none;
    cursor: pointer;
    transition: background 0.15s;
    outline: none;
    width: 140px;
  }
  .githubbutton:hover,
  .githubbutton:focus {
    background: #363636;
    color: #fff;
    text-decoration: none;
  }

  @media (min-width: 700px) {

  }

